Edited wiki page through web user interface.

--- a/wiki/TailMasterFeatures.wiki
+++ b/wiki/TailMasterFeatures.wiki
@@ -1,4 +1,6 @@
+#summary This page contains features of TailMaster.
 #labels Featured
+
 = TailMaster Features =
 This page contains features of TailMaster:
 
