Edited wiki page through web user interface.

--- a/wiki/TailMasterChangeLog.wiki
+++ b/wiki/TailMasterChangeLog.wiki
@@ -2,6 +2,9 @@
 #labels Featured
 
 = v0.5.2=
+ * Escape character sequences are ignored in ssh terminal.(This feature will be abandoned, when escape character management is implemented)
+
+= v0.5.2=
 
  * Configured application logging. The application now appends logs to {{{USER_HOME/.tailmaster/tailmaster.log}}} file.
  * Fixed a bug which prevents deletion of configuration items(server and log data).
